infra/k8s/statefulset-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: wegia
  labels:
    app: mariadb
spec:
  ports:
    - port: 3306
      name: mysql
  selector:
    app: mariadb
---
apiVersion: v1
kind: Service
metadata:
  name: db-headless
  namespace: wegia
  labels:
    app: mariadb
spec:
  clusterIP: None
  ports:
    - port: 3306
      name: mysql
  selector:
    app: mariadb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
  namespace: wegia
spec:
  serviceName: "db-headless"
  replicas: 2
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
      - name: mariadb
        image: mariadb:10.11
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: data
          mountPath: /var/lib/mysql
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
