infra/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wegia-back-ingress
  namespace: wegia

spec:
  igressClassName: webapprouting.kubernetes.azure.com
  rules:
    - host: api.wegia.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wegia-back
                port:
                  number: 80
